force visibility of droptarget in empty block, fixes #20

--- a/src/languages/pyret/style-selection/style/scratch.less
+++ b/src/languages/pyret/style-selection/style/scratch.less
@@ -490,7 +490,8 @@
   }
 
   //Correction for empty blocks
-  .blocks-arguments-empty {
+  .blocks-arguments-empty,
+  .blocks-block-expanded > span > span {
     .blocks-drop-target {
       display: block;
     }
